[metadata]
name = entrenador_AER
version = 0.1.0
author = Miguel Martinez
description = Toolbox de entrenamiento en computación cuántica para las funciones Samples y Estimator de Qiskit AER
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.8
